Add jSpecify node.system.ssh package.